apps/istio-ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app: istio-ingressgateway
    istio: ingressgateway

spec:  
  type: NodePort  # LoadBalancer 변경
  ports:
  - name: http2
    nodePort: 31929
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    nodePort: 30660
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
