apps/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-backend-virtualservice
  namespace: istio-system 
spec:
  hosts:
    - "*"
  gateways:
    - frontend-backend-gateway
  http:
    - match:
        - uri:
            prefix: /frontend
      route:
        - destination:
            host: frontend.default.svc.cluster.local
            port:
              number: 5173
    - match:
        - uri:
            prefix: /backend
      route:
        - destination:
            host: backend.default.svc.cluster.local
            port:
              number: 8000
    - match:
        - uri:
            prefix: /nginx
      route:
        - destination:
            host: nginx.default.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /kiali
      rewrite:
        uri: /kiali    # Kiali 기본 web_root 경로
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
    - match:
        - uri:
            prefix: /prometheus
      rewrite:
        uri: /prometheus
      route:
        - destination:
            host: prometheus.istio-system.svc.cluster.local
            port:
              number: 9090
